--- a/app/src/App.css
+++ b/app/src/App.css
@@ -28,6 +28,106 @@
   color: #61dafb;
 }
 
+sidebar {
+  background-color: #2d2a2a;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 20rem;
+  padding: 2rem 1rem;
+}
+
+.sidebar-menu {
+  padding: 0;
+  margin: 0 -2rem;
+}
+
+.sidebar-menu .menu-items {
+  list-style: none;
+}
+
+.sidebar-menu .menu-links {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  display: block;
+  text-decoration: none;
+  padding: 1rem 1.3rem;
+  color: #fff;
+  font-weight: 700;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+}
+
+.sidebar-menu .menu-links:hover {
+  -webkit-transform: translateY(3px);
+  transform: translateY(3px);
+  background-color: #15f3a8;
+  color: #515151;
+}
+
+.sidebar-container {
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: #2d2a2a;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 20rem;
+  padding: 2rem 1rem;
+}
+
+.sidebar-logo .logo {
+  /* font-family: 'Finger Paint', cursive; */
+  color: #15f3a8;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.sidebar-social {
+  text-align: center;
+}
+
+.sidebar-social .social-items {
+  display: inline-block;
+}
+
+.sidebar-social .social-links {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.sidebar-social .social-icons {
+  font-size: 2.5rem;
+  padding: 0.4rem 0.5rem;
+  color: #ccc;
+  -webkit-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
+  transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
+}
+
+.sidebar-social .social-icons:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
